--- a/installation.html
+++ b/installation.html
@@ -75,7 +75,22 @@
                                                 your code with packages of code that other people have written. One big advantage of python is that
                                                 many people have made such libraries, resulting in lots of variety and support.
                                             </p>
-                                        </dd>
+										</dd>
+										<dt>Step 5</dt>
+										<dd>
+											<p>Now we want to start installing our code editor Visual Studio Code</p>
+											<p>Install VSCode from https://code.visualstudio.com/download</p>
+										</dd>
+										<dt>Step 6</dt>
+										<dd>
+											<p>After setting up VSCode we want to add an 'Extension', do this by clicking this icon on the top left:</p>
+											<span class="image object"><img src="images/extension.png" alt="" /></span>
+										</dd>
+										<dt>Step 7</dt>
+										<dd>
+											<p>Type in 'Python' into the search bar and install it</p>
+											<span class="image object"><img src="images/python_extension.png" alt="" /></span>
+										</dd>
                                     </dl>
 								</section>
 
