--- a/minimax.html
+++ b/minimax.html
@@ -27,6 +27,9 @@
 
 							<!-- Content -->
 								<section>
+									<iframe width="420" height="315"
+										src="https://www.youtube.com/embed/ydvWGU-UOP4">
+									</iframe>
 									<header class="main">
 										<h1>Datatypes and Operations</h1>
 									</header>
